# manifoldb

./: .gitignore  ARCHITECTURE_INVESTIGATION_REPORT.md  CLAUDE.md  CONTRIBUTING.md  COVERAGE_MATRICES.md  Cargo.toml  ISSUES.md  LOGICAL_PLAN_SPECIFICATION.md  PRODUCTION_READINESS_REPORT.md  QUERY_IMPLEMENTATION_ROADMAP.md  README.md  clippy.toml  package-lock.json  rustfmt.toml
crates/manifold-server/: Cargo.toml
crates/manifold-server/src/: convert.rs  embedding.rs  lib.rs  main.rs  pubsub.rs  server.rs
crates/manifold-server/src/schema/: mod.rs  mutation.rs  query.rs  subscription.rs  types.rs
crates/manifold-server/tests/: batch_mutations.rs
crates/manifoldb-core/: Cargo.toml
crates/manifoldb-core/src/: lib.rs
crates/manifoldb-core/src/encoding/: edge.rs  entity.rs  keys.rs  mod.rs  sortable.rs  value.rs
crates/manifoldb-core/src/index/: catalog.rs  mod.rs  property.rs
crates/manifoldb-core/src/transaction/: mod.rs  result.rs
crates/manifoldb-core/src/types/: entity.rs  id.rs  mod.rs  scored.rs  value.rs  vector.rs
crates/manifoldb-graph/: Cargo.toml
crates/manifoldb-graph/src/: lib.rs
crates/manifoldb-graph/src/analytics/: closeness.rs  connected.rs  degree.rs  eigenvector.rs  louvain.rs  mod.rs  similarity.rs  triangle.rs
crates/manifoldb-graph/src/index/: adjacency.rs  maintenance.rs  mod.rs
crates/manifoldb-graph/src/store/: edge.rs  mod.rs  node.rs
crates/manifoldb-graph/src/traversal/: astar.rs  bfs.rs  dfs.rs  mod.rs  pattern.rs
crates/manifoldb-graph/tests/: adjacency_tests.rs  analytics_tests.rs  edge_tests.rs  node_tests.rs  traversal_tests.rs
crates/manifoldb-query/: Cargo.toml
crates/manifoldb-query/src/: error.rs  lib.rs
crates/manifoldb-query/src/ast/: expr.rs  mod.rs  pattern.rs  statement.rs  vector.rs
crates/manifoldb-query/src/exec/: context.rs  executor.rs  graph_accessor.rs  mod.rs  row.rs
crates/manifoldb-query/src/parser/: extensions.rs  mod.rs  sql.rs
crates/manifoldb-query/src/plan/: mod.rs
crates/manifoldb-query/src/procedure/: mod.rs  registry.rs  signature.rs  traits.rs
crates/manifoldb-query/tests/: parser_tests.rs
crates/manifoldb-storage/: Cargo.toml
crates/manifoldb-storage/benches/: redb_bench.rs
crates/manifoldb-storage/src/: lib.rs
crates/manifoldb-storage/src/engine/: traits.rs
crates/manifoldb-storage/src/wal/: mod.rs  recovery.rs
crates/manifoldb-storage/tests/: engine_tests.rs
crates/manifoldb-vector/: Cargo.toml
crates/manifoldb-vector/benches/: distance.rs  filtered_search.rs
crates/manifoldb-vector/src/: lib.rs
crates/manifoldb-vector/src/distance/: scalar.rs  simd.rs  sparse.rs
crates/manifoldb-vector/src/encoding/: collection_vector_keys.rs  inverted_keys.rs  mod.rs  point_keys.rs
crates/manifoldb-vector/src/index/: coordinator.rs  graph.rs  hnsw.rs  manager.rs  mod.rs  persistence.rs  registry.rs
crates/manifoldb-vector/src/ops/: hybrid.rs
crates/manifoldb-vector/src/quantization/: config.rs  mod.rs  pq.rs
manifoldb/: Cargo.toml
manifoldb-core/: Cargo.toml
manifoldb-core/src/: error.rs  lib.rs
manifoldb-core/src/encoding/: edge.rs  entity.rs  keys.rs  mod.rs  proptest_tests.rs  traits.rs  value.rs
manifoldb-core/src/transaction/: error.rs  mod.rs
manifoldb-core/src/types/: edge.rs  entity.rs  id.rs  value.rs
manifoldb-query/: Cargo.toml
manifoldb-query/src/: error.rs  lib.rs
manifoldb-query/src/ast/: expr.rs  mod.rs  pattern.rs  statement.rs  vector.rs
manifoldb-query/src/exec/: context.rs  executor.rs  graph_accessor.rs  mod.rs  operator.rs  result.rs  row.rs
manifoldb-query/src/parser/: extensions.rs  mod.rs  sql.rs
manifoldb-query/src/plan/: mod.rs
manifoldb-query/tests/: parser_tests.rs
manifoldb-storage/: Cargo.toml
manifoldb-storage/benches/: redb_bench.rs
manifoldb-storage/src/: lib.rs
manifoldb-storage/src/backends/: mod.rs  wal_engine.rs
manifoldb-storage/src/engine/: error.rs  mod.rs  traits.rs
manifoldb-storage/src/wal/: entry.rs  error.rs  mod.rs  recovery.rs  writer.rs
manifoldb-storage/tests/: engine_tests.rs  redb_tests.rs
manifoldb-vector/: Cargo.toml
manifoldb-vector/benches/: distance.rs  filtered_search.rs
manifoldb-vector/src/: lib.rs
manifoldb-vector/src/distance/: binary.rs  mod.rs  scalar.rs  simd.rs
manifoldb-vector/src/encoding/: keys.rs  mod.rs
manifoldb-vector/src/error/: mod.rs
manifoldb-vector/src/index/: config.rs  graph.rs  hnsw.rs  mod.rs  persistence.rs  registry.rs  traits.rs
manifoldb-vector/src/ops/: ann_scan.rs  exact_knn.rs  filter.rs  maxsim.rs  mod.rs
manifoldb-vector/src/quantization/: pq.rs  training.rs
manifoldb-vector/src/store/: mod.rs  multi_vector_store.rs  vector_store.rs
manifoldb-vector/src/types/: binary.rs  embedding.rs  mod.rs  multi.rs  space.rs
manifoldb-vector/tests/: pq_integration.rs
manifoldb/benches/: benchmarks.rs
manifoldb/examples/: basic_usage.rs  graph_queries.rs  vector_search.rs
manifoldb/src/: config.rs  database.rs  error.rs  lib.rs  prepared.rs
manifoldb/src/backup/: error.rs  export.rs  import.rs  mod.rs  types.rs
manifoldb/src/cache/: metrics.rs  mod.rs  query_cache.rs
manifoldb/src/execution/: executor.rs  graph_accessor.rs  mod.rs  scan.rs  table_extractor.rs
manifoldb/src/schema/: mod.rs
manifoldb/src/transaction/: batch_writer.rs  handle.rs  manager.rs  mod.rs
manifoldb/src/vector/: mod.rs
manifoldb/tests/: api_tests.rs  integration_tests.rs  transaction_tests.rs
manifoldb/tests/fixtures/: generators.rs
manifoldb/tests/integration/: combined.rs  concurrency.rs  correctness.rs  e2e.rs  graph.rs  mod.rs  prepared.rs  scale.rs  sql.rs  transactions.rs  vector.rs
tools/gimbal/: Cargo.toml  gimbal.toml
tools/gimbal/docs/: SCHEMA.md
tools/gimbal/src/: config.rs  embed.rs  ingest.rs  main.rs  store.rs
tools/gimbal/src/chunk/: markdown.rs  (+3 more)
tools/manifold-cli/: Cargo.toml
tools/manifold-cli/src/: error.rs  main.rs  output.rs  repl.rs
tools/manifold-embed/: Cargo.toml
tools/manifold-embed/src/: chunk.rs  config.rs  embed.rs  ingest.rs  main.rs  store.rs
tools/session-viewer/server/: Cargo.toml
(+431 files in other folders)
