[workspace]
resolver = "2"
members = [
    "manifoldb",
    "manifoldb-core",
    "manifoldb-storage",
    "manifoldb-graph",
    "manifoldb-vector",
    "manifoldb-query",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ManifoldDB Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/manifoldb/manifoldb"
rust-version = "1.75"

[workspace.dependencies]
# Internal crates
manifoldb = { path = "manifoldb" }
manifoldb-core = { path = "manifoldb-core" }
manifoldb-storage = { path = "manifoldb-storage" }
manifoldb-graph = { path = "manifoldb-graph" }
manifoldb-vector = { path = "manifoldb-vector" }
manifoldb-query = { path = "manifoldb-query" }

# Storage
redb = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
bincode = "1"

# Error handling
thiserror = "1"

# Async runtime (for future use)
tokio = { version = "1", features = ["full"] }

# Testing
proptest = "1"
criterion = "0.5"

# Workspace-wide lints
[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
# Pedantic lints - enable most, allow some that are too noisy
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# Nursery lints - selectively enable
nursery = { level = "warn", priority = -1 }
option_if_let_else = "allow"

# Strict safety lints
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

# Development markers
todo = "warn"
unimplemented = "warn"

# Style
enum_glob_use = "deny"
wildcard_imports = "deny"
