[package]
name = "manifoldb-storage"
description = "Storage engine abstraction and backends for ManifoldDB"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
manifoldb-core = { workspace = true }
redb = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
tempfile = "3"

[[bench]]
name = "redb_bench"
harness = false

[lints]
workspace = true
