[package]
name = "manifold-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GraphQL server for ManifoldDB"

[dependencies]
# Internal
manifoldb.workspace = true
manifoldb-core.workspace = true
manifoldb-vector.workspace = true
manifoldb-storage.workspace = true

# Embeddings
tessera-embeddings = { path = "../../../tessera", features = ["metal"] }

# GraphQL
async-graphql = { version = "7", features = ["playground"] }
async-graphql-axum = "7"

# HTTP Server
axum = { version = "0.8", features = ["ws"] }
tokio.workspace = true
tower-http = { version = "0.6", features = ["cors", "limit"] }

# Serialization
serde.workspace = true
serde_json.workspace = true
base64.workspace = true

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3.31"
tokio-stream = { version = "0.1.18", features = ["sync"] }
uuid = { version = "1.19.0", features = ["v7"] }

[dev-dependencies]
tempfile = "3.24.0"
