[package]
name = "manifoldb-vector"
description = "Vector storage and similarity search for ManifoldDB"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[features]
default = ["simd"]
# Enable SIMD-optimized distance calculations (recommended for production)
simd = []
# Fallback to scalar implementations (for debugging or platforms without SIMD)
scalar = []

[dependencies]
manifoldb-core = { workspace = true }
manifoldb-storage = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }

# SIMD support - portable across x86 (SSE/AVX), ARM (NEON), and WASM
wide = "1.1.1"
serde_json.workspace = true

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
rand = "0.8"

[[bench]]
name = "distance"
harness = false

[[bench]]
name = "filtered_search"
harness = false

[lints]
workspace = true
