[package]
name = "gimbal"
version = "0.1.0"
edition = "2021"
description = "CLI tool for embedding documents with Tessera and storing in ManifoldDB"
license = "MIT OR Apache-2.0"

# Keep this crate independent from the main workspace
[workspace]

[[bin]]
name = "gimbal"
path = "src/main.rs"

[[bin]]
name = "check-db"
path = "src/bin/check_db.rs"

[dependencies]
# ManifoldDB (local workspace)
manifoldb = { path = "../../crates/manifoldb" }
manifoldb-storage = { path = "../../crates/manifoldb-storage" }

# Tessera embeddings (local path for now - switch to crates.io when published)
tessera = { package = "tessera-embeddings", path = "/Users/tom/Developer/projects/khitomer/components/tessera" }

# CLI
clap = { version = "4.5.53", features = ["derive"] }

# Config
toml = "0.8"
serde = { version = "1.0.228", features = ["derive"] }

# File handling
walkdir = "2.5.0"
glob = "0.3.3"

# Error handling
anyhow = "1.0.100"
thiserror = "2"

# Serialization
serde_json = "1"

# Tree-sitter for code parsing
tree-sitter = "0.25"
streaming-iterator = "0.1"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-json = "0.24"
tree-sitter-yaml = "0.7"
tree-sitter-css = "0.23"
tree-sitter-bash = "0.23"
tree-sitter-md = "0.5"

# Async/IO
tokio = { version = "1.48.0", features = ["full"] }

[features]
default = ["metal"]
metal = ["tessera/metal"]
cuda = ["tessera/cuda"]

# Patch candle to use fork with Qwen3 embeddings, JinaBERT Code, and Qwen2 prefix detection
[patch.crates-io]
candle-core = { git = "https://github.com/tomWhiting/candle.git", rev = "b014c086" }
candle-nn = { git = "https://github.com/tomWhiting/candle.git", rev = "b014c086" }
candle-transformers = { git = "https://github.com/tomWhiting/candle.git", rev = "b014c086" }
