[package]
name = "manifold-embed"
version = "0.1.0"
edition = "2021"
description = "CLI tool for embedding documents with Tessera and storing in ManifoldDB"
license = "MIT OR Apache-2.0"

# Keep this crate independent from the main workspace
[workspace]

[[bin]]
name = "manifold-embed"
path = "src/main.rs"

[[bin]]
name = "check-db"
path = "src/bin/check_db.rs"

[dependencies]
# ManifoldDB (local workspace)
manifoldb = { path = "../../crates/manifoldb" }
manifoldb-storage = { path = "../../crates/manifoldb-storage" }

# Tessera embeddings (local path for now - switch to crates.io when published)
tessera = { package = "tessera-embeddings", path = "/Users/tom/Developer/spaces/projects/hyperspatial/main/tessera" }

# CLI
clap = { version = "4.5.53", features = ["derive"] }

# Config
toml = "0.8"
serde = { version = "1.0.228", features = ["derive"] }

# File handling
walkdir = "2.5.0"
glob = "0.3.3"

# Error handling
anyhow = "1.0.100"
thiserror = "2"

# Serialization
serde_json = "1"

# Async/IO
tokio = { version = "1.48.0", features = ["full"] }

[features]
default = []
metal = ["tessera/metal"]
cuda = ["tessera/cuda"]
