[package]
name = "session-viewer-server"
version = "0.1.0"
edition = "2021"
description = "HTTP API server for ManifoldDB Session Viewer"

[[bin]]
name = "session-server"
path = "src/main.rs"

[dependencies]
# ManifoldDB
manifoldb = { path = "../../../crates/manifoldb" }
manifoldb-core = { path = "../../../crates/manifoldb-core" }

# HTTP server
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "2"
